chore: add javadoc, refactor some tests, add subscribers folder to test the application easily