@@ -12,35 +12,61 @@ import org.springframework.stereotype.Service;
 import java.io.BufferedReader;
 import java.io.FileReader;
 import java.nio.file.Path;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
+/**
+ * Service for sending emails based on predefined recipient groups
+ * loaded from a configuration file.
+ *
+ * <p>Supports email level groups like "fatal", "warn", etc., and
+ * sends emails only if enabled through configuration.
+ */
 @Service
 public class EmailService {
     private static final Logger LOGGER = LogManager.getLogger(EmailService.class);
 
     private final JavaMailSender mailSender;
-    private final Map<String, List<String>> groupEmailMap = new HashMap<>();
+    private Map<String, List<String>> groupEmailMap = new HashMap<>();
 
     @Value("${app.email.group-file}")
     private String emailGroupFilePath;
 
-    @Value("${app.email.enabled}")
-    private boolean emailEnabled = false;
+    @Value("${app.email.enabled:false}")
+    private boolean emailEnabled;
 
+    /**
+     * Constructs EmailService with injected JavaMailSender.
+     *
+     * @param mailSender the mail sender component
+     */
     @Autowired
     public EmailService(JavaMailSender mailSender) {
         this.mailSender = mailSender;
     }
 
+    /**
+     * Loads email groups from the configured file into memory.
+     * Each line in the file should be in the format:
+     * <pre>
+     * level:email1@example.com,email2@example.com
+     * </pre>
+     */
     @PostConstruct
     public void loadEmailGroups() {
-        if (!emailEnabled) return;
+        if (!emailEnabled) {
+            LOGGER.info("Email sending is disabled. Skipping loading of email groups.");
+            return;
+        }
+
+        if (emailGroupFilePath == null || emailGroupFilePath.isBlank()) {
+            LOGGER.warn("Email group file path is empty or not set.");
+            return;
+        }
 
         try (BufferedReader reader = new BufferedReader(new FileReader(Path.of(emailGroupFilePath).toFile()))) {
+            Map<String, List<String>> tempMap = new HashMap<>();
             String line;
+
             while ((line = reader.readLine()) != null) {
                 String[] parts = line.split(":", 2);
 
@@ -51,21 +77,39 @@ public class EmailService {
                             .map(String::trim)
                             .filter(s -> !s.isEmpty())
                             .toList();
-                    groupEmailMap.put(level, emails);
+
+                    if (!emails.isEmpty()) {
+                        tempMap.put(level, emails);
+                    }
                 }
             }
+
+            groupEmailMap = Collections.unmodifiableMap(tempMap);
+            LOGGER.info("Loaded email groups from file '{}': {}", emailGroupFilePath, groupEmailMap.keySet());
+
         } catch (Exception e) {
-            LOGGER.error("Failed to read email group file: {}", e.getMessage());
+            LOGGER.error("Failed to read email group file '{}'", emailGroupFilePath, e);
         }
     }
 
+    /**
+     * Sends an email with the specified subject and message to the recipients
+     * associated with the given email level.
+     *
+     * @param subject the email subject
+     * @param message the email body content
+     * @param level   the recipient group level (e.g., "fatal", "warn")
+     */
     public void sendEmail(String subject, String message, String level) {
-        if (!emailEnabled) return;
+        if (!emailEnabled) {
+            LOGGER.debug("Email sending disabled; skipping email for level: {}", level);
+            return;
+        }
 
         List<String> recipients = getEmailsForLevel(level);
 
-        if (recipients == null || recipients.isEmpty()) {
-            LOGGER.warn("No recipients found for level: {}. Skipping email...", level);
+        if (recipients.isEmpty()) {
+            LOGGER.warn("No recipients found for email level '{}'. Skipping sending email.", level);
             return;
         }
 
@@ -74,10 +118,24 @@ public class EmailService {
         email.setSubject(subject);
         email.setText(message);
 
-        mailSender.send(email);
+        try {
+            mailSender.send(email);
+            LOGGER.info("Sent email to {} recipients for level '{}'", recipients.size(), level);
+        } catch (Exception e) {
+            LOGGER.error("Failed to send email to recipients: {}", recipients, e);
+        }
     }
 
-    private List<String> getEmailsForLevel(String level) {
-        return groupEmailMap.getOrDefault(level.toLowerCase(), List.of());
+    /**
+     * Retrieves the list of email addresses for the specified group level.
+     *
+     * @param level the email group level
+     * @return list of email addresses, or empty list if none found
+     */
+    public List<String> getEmailsForLevel(String level) {
+        if (level == null) {
+            return Collections.emptyList();
+        }
+        return groupEmailMap.getOrDefault(level.toLowerCase(), Collections.emptyList());
     }
 }
